--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  background: "#070F1B";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,6 +15,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: "#070F1B";
 }
 
 body {
@@ -22,12 +24,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: "#070F1B"
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  background: "#070F1B"
 }
 
 a {
@@ -38,5 +42,6 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    background: "#070F1B";
   }
 }
