--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,7 @@
   --gray-rgb: 0, 0, 0;
   --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
   --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
+  background: "#070F1B";
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
@@ -21,7 +21,7 @@
     --gray-rgb: 255, 255, 255;
     --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
     --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
+    background: "#070F1B";
     --button-primary-hover: #ccc;
     --button-secondary-hover: #1a1a1a;
   }
@@ -32,6 +32,7 @@
   flex-direction: column;
   gap: 32px;
   grid-row-start: 2;
+  background: "#070F1B";
 }
 
 .main ol {
